# dwlm

./: .gitignore  README.md  dqlschema.txt  energy-model.py  energy-optimizer-overview.md  energy-overview.md  hello.py  modus.json  out.json  output.json  package-lock.json  package.json  products.csv  products.json  pyproject.toml
assembly/: classes.ts  dgraph-utils.ts  embeddings.ts  index.ts  pumpingstation-helpers.ts  test.ts
energy/: adding-entities.py  debiet_gouda.csv  debiet_gouda_stripped.csv  debiet_halfweg.csv  debiet_halfweg_stripped.csv  debiet_katwijk.csv  debiet_katwijk_stripped.csv  power-profile.py  price-profile.py  pumping-station.py  water-level.py  waterpeil_gouda.csv  waterpeil_halfweg.csv  waterpeil_katwijk.csv
energy/debieten_per_dag/: 2025-01-01.csv  2025-01-02.csv  2025-01-03.csv  2025-01-04.csv  2025-01-05.csv  2025-01-06.csv  2025-01-07.csv  2025-01-08.csv
energy_optimizer/: .modusrc  README.md  best_model.pth  convert_model.sh  convert_to_onnx.py  energy_env.py  energy_function.go  energy_function_test.go  energy_model.onnx  energy_model.pth  energy_policy.py  function.go  function_test.go  generate_synthetic_data.py  mcp_server.py  modus.yaml  optimize_profile.py  requirements.txt  setup.py  test_model_conversion.py  test_request.py  test_request.sh  test_wasm_model.py  train_model.py
energy_optimizer/pump_profiles/: flip_sign.py  gouda_profile.csv  gouda_profile_flipped.csv  halfweg_profile.csv  halfweg_profile_flipped.csv  katwijk_profile.csv  katwijk_profile_flipped.csv  prices_profile.csv  prices_profile_generated.csv
(+3 files in other folders)
